<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".presenter.view.MainActivity">

    <TextView
        android:id="@+id/coin_name"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_splash"
        android:textColor="@android:color/white"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/data_coin_top_bar"
        android:layout_margin="16dp"
        android:paddingTop="10dp"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="data"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/coin_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <SearchView
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/search_bar"
        android:backgroundTint="@android:color/darker_gray"
        android:contextClickable="true"
        android:iconifiedByDefault="false"
        android:inputType="text"
        android:contentDescription="@string/search_content"
        android:outlineSpotShadowColor="#FFFFFF"
        android:queryHint="search"
        android:searchIcon="@drawable/ic_baseline_search_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_coin_top_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_recycler_coin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/coin_list_item"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView

        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/coin_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/botao_lista_de_moedas"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_main"
                    android:layout_width="205dp"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:backgroundTint="@android:color/black"
                    android:padding="100dp"
                    android:src="@drawable/ic_menu_1"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/txt_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|center"
                    android:text="@string/moedas"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/botao_moedas_favoritas"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_star"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="@android:color/black"
                    android:padding="100dp"
                    android:src="@drawable/ic_menu_2"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/txt_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|center"
                    android:text="@string/favoritos"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>
