<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_item_list_coin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_coin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:contentDescription="@string/description_coin">

        <ImageView
            android:id="@+id/imgcoin"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/name_coin"
            app:layout_constraintHorizontal_bias="0.313"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_coin"
            android:layout_width="127dp"
            android:layout_height="26dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/titulo_coin"
            android:text="@string/titulo_coin"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.313"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_coin"
            android:layout_width="40dp"
            android:layout_height="22dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.239"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_coin"
            app:layout_constraintVertical_bias="0.0"
            tools:text="13" />

        <TextView
            android:id="@+id/price_usd"
            android:layout_width="89dp"
            android:layout_height="22dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/valor_coin"
            android:gravity="center"
            android:text="@string/valor_coin"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/name_coin"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/favorite_star"
            android:layout_width="23dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name_coin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:srcCompat="@drawable/ic_baseline_star_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>